# mode-float

./: .env.example  .gitignore  Dockerfile  Dockerfile.inline  Makefile  README.md  build_docs.sh  docker-compose.dev.yml  docker-compose.prod.yaml  docker-compose.prod.yml  docker-compose.yaml  docker-compose.yml  entrypoint.sh  fly-potato-workbook.json  nginx.dev.conf  nginx.prod.conf  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: deploy.yml  linters.yml
alembic/: env.py
alembic/versions/: 37a383ddd61a_add_operator.py  3893d4b3641d_add_trigger_regions.py  8a6cc7f6a0d5_init.py  90ae82e041a4_add_file_table.py  b7f3c9d5a2e1_shapemap.py  e37f40e4e50f_init.py  efb5b4c0c473_add_region_model_and_update_.py
backend/: dto.py  main.py  middleware.py  monitoring_agent.py
backend/core/: settings.py
backend/database/: base.py  models.py
backend/metrics/: __init__.py  event_metric.py  registration_metric.py
backend/repositories/: base_repository.py  file_repository.py  uav_repository.py
backend/routers/: dashboard_router.py  region_router.py  uav_router.py  user_router.py
backend/schemas/: dashboard_schema.py  file_schema.py  uav_schema.py  user_schema.py
backend/services/: __init__.py  dashboard_service.py  exceptions.py  file_service.py  region_service.py  uav_service.py
backend/services/parse_service/: geocoder.py  mapper.py  party_classifier.py
backend/utils/: __init__.py
config/: alert.rules.yaml  alertmanager.yaml.template  pg_app.collector.yaml  prometheus.yaml.template  sql_exporter.yaml  telegram.tmpl
docs/: .gitignore  README.md  SUMMARY.md  acceptance_act.md  admin_manual.md  pmi.md  refs.yaml  spec.md  test_report.md  user_manual.md
docs/filters/: mermaid.lua
docs/templates/: eis.gost.tex
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/public/embeds/: dashboard1.html
frontend/src/: App.css  App.tsx  index.css  main.tsx
frontend/src/config/: auth.ts
frontend/src/context/: AuthContext.tsx
frontend/src/hooks/: useDatalensEmbed.ts  useJournalData.ts  useJournalExport.ts
frontend/src/pages/: DashboardPage.tsx  JournalPage.tsx  LoginPage.tsx  NoAccessPage.tsx  RegisterPage.tsx  UploadPage.tsx
keycloak-theme/: README.md
scripts/: build_docs.sh  load_russia_regions.py
src/: exc.py  main.py  middleware.py  monitoring_agent.py
src/core/: __init__.py  settings.py
src/database/: base.py  enums.py  models.py
src/metrics/: __init__.py  enums.py  event_metric.py  registration_metric.py
src/repositories/: __init__.py  base_repository.py  file_repository.py  template_repository.py  uav_repository.py
src/routers/: __init__.py  uav_router.py
src/services/: __init__.py  exceptions.py  file_service.py  uav_service.py
src/utils/: __init__.py
tests/: conftest.py  pytest.ini
tests/assets/: test_dataset.xlsx
tests/repositories/: test_base_repository.py
(+19 files in other folders)
